savage: Factor out a SAVAGESetAgpMode and call it on resume

This should fix resume with AGP. After all these years...

https://bugzilla.kernel.org/show_bug.cgi?id=4607

Signed-off-by: Tormod Volden <debian.tormod@gmail.com>
Reviewed-by: Matt Turner <mattst88@gmail.com>
Reviewed-by: Alex Deucher <alexdeucher@gmail.com>